--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,7 +187,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Run Gosec Security Scanner
-      uses: securecodewarrior/github-action-gosec@master
+    - name: Set up Go
+      uses: actions/setup-go@v4
       with:
-        args: './...'
+        go-version: ${{ env.GO_VERSION }}
+    
+    - name: Install Gosec Security Scanner
+      run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+    
+    - name: Run Gosec Security Scanner
+      run: gosec ./...
