--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: [test, build]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && secrets.DOCKER_USERNAME != ''
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
     
     steps:
     - uses: actions/checkout@v4
@@ -144,6 +144,7 @@ jobs:
     
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
+      if: ${{ secrets.DOCKER_USERNAME != '' }}
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
@@ -163,6 +164,7 @@ jobs:
     
     - name: Build and push main server image
       uses: docker/build-push-action@v5
+      if: ${{ secrets.DOCKER_USERNAME != '' }}
       with:
         context: .
         file: ./Dockerfile
@@ -174,6 +176,7 @@ jobs:
     
     - name: Build and push device server image
       uses: docker/build-push-action@v5
+      if: ${{ secrets.DOCKER_USERNAME != '' }}
       with:
         context: .
         file: ./Dockerfile.device
